--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   bottom_drawer: ^0.0.5
   collection_change_notifier: ^2.0.2
   provider: ^6.1.2
+  shared_preferences: ^2.3.2
   
 dev_dependencies:
   flutter_test:
